# lhm-monitor

./: .gitignore  README.md  electron-builder.yml  index.html  main.js  package-lock.json  package.json  preload.js  tsconfig.json  tsconfig.node.json  vite.config.ts
electron/: main.ts  preload.ts
legacy/v2-electron-preact/: electron-builder.yml
legacy/v2-electron-preact/electron/: main.ts
legacy/v2-electron-preact/electron/ipc/: channels.ts
refactor-design/: ARCHITECTURE.md
src/: App.tsx  index.html  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lhm.rs  lib.rs  poller.rs
src/components/: StatusBar.tsx  TitleBar.tsx
src/components/Dashboard/: DeviceCard.tsx  GaugeRing.tsx  SensorRow.tsx  TempBar.tsx  index.tsx
src/components/Settings/: AboutTab.tsx  AppearanceTab.tsx  BasicTab.tsx  LayoutTab.tsx  index.tsx
src/core/: connection.ts  memo.ts  parser.ts  types.ts
src/hooks/: index.ts  usePolling.ts  useResizeObserver.ts  useSettings.ts  useTheme.ts
src/styles/: global.css  variables.css
src/styles/components/: Dashboard.module.css  Gauge.module.css  Settings.module.css  StatusBar.module.css  TitleBar.module.css
v3/: .gitignore  index.html  package-lock.json  vite.config.ts
v3/src/: main.tsx
v3/src-tauri/: Cargo.toml
v3/src-tauri/capabilities/: default.json
v3/src-tauri/src/: lhm.rs  main.rs  store.rs
v3/src/components/: TitleBar.tsx
v3/src/components/Dashboard/: DeviceCard.tsx  GaugeRing.tsx  SensorRow.tsx  index.tsx  (+1 more)
v3/src/core/: api.ts  memo.ts  types.ts
v3/src/hooks/: index.ts
v3/src/styles/: variables.css
(+5 files in other folders)
